# Agentic-AI

Invoice-Extractor-APP/: README.md  app.py
ai_health_fitness_agent/: README.md  app.py  requirements.txt
ai_real_estate_agent/: README.md  ai_real_estate_agent.py  requirements.txt
chatAPP/: README.md  chatapp.py
multimodal_design_agent_team/: README.md  design_agent_team.py  langchain_agent_team.py  requirements.txt
pdfChat-App/: README.md  app.py  pyproject.toml  requirements.txt
pdfChat-App/faiss_index/: index.faiss  index.pkl
pdfChat-App/src/pdfchat_app/: __init__.py  script.py
