[project]
name = "pdfchat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jahanzaib Tayyab", email = "jtayyab204@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
]

[project.scripts]
pdfchat-app = "pdfchat_app:main"
run_app = "pdfchat_app.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
